--- a/MartManagementSystem/tabAddStock.resx
+++ b/MartManagementSystem/tabAddStock.resx
@@ -128,81 +128,76 @@
   <data name="btnDelete.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFoAAAApCAYAAAC1Hj5tAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVGhD7ZrNKwRhHMf9RW4ubk5OXCglBxykKFIkSQ4S
-        STisEqK8h1YUSbRko5W3JEt5t8pbJjmIw0/fZ8ew7di8PPOcvp/61tbuzOEz22+eme+TZFmWMN6Hog2F
-        og2Fog2Fog2Fog0loeib+zuZ3FyQCn+r5A/VSXpXiSS35DB24ANeSieaZCQ0J1e3164ekW9Fz++tqhNV
-        TrfL3EFQNi72JWLdCvkEPuBl8SgktbM+5QvC3XzGicZVqZ7ukOLxRrl7frRPSX7C08uzEl401iDH1+cx
-        XmNEQ3JWX6VM7QXsQ8lfWD3ZltyBGglfHruLxj+ZkvWAkYL5HScaMxnjguijfWVYOpfHPkVjdYFBzpms
-        l5e3V8nur5Lds3BUNO6UGOJEP73rU9K80BcVjXUglihEP+GbU7XAUKIzusvk5CFif0V0gvGR0pYXFZ3a
-        UaDWgMQb8BSpROMD8Q6KNgRFG4KiDUHRhqBoQ1C0ISjaEI5oPLngCYZ4gyMab+5YU3mHIxrVC1oBoh+8
-        Q8K7JCXaFxhVL6mJftBYoblSotFtZfaUc057QJm/RWZ2AlHRSNvSoHQGx+2viQ6wTQN7YuDXEY06C2Xi
-        buTI/hn5D6gFMSU+NtU4ohF0W+i4WAL8D0guHKmXwEHIcRsjGgkebqnqpWfNbx9GfgMqQfyTv0pG4kQj
-        GCMoFHFVcNdkO54YtFOYx9g+h/7VbQ+eq+iP4KpgaZLmK1KLbsY9qAJx08OGUDePSELRjL5QtKFQtKFQ
-        tKFQtJFY8g5w3Rck5VXYMgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH2SURBVGhD7ZqtS0NRGIf9i2wmm8lmEotJgwgGLVo0mAwK
+        foQFYcGgCBoGBpMgoiAaRESUhQnCgooosjA0HHmO91y8bLtMd/am3wMHLvsKz3n53XPfdz1OmCDRRki0
+        ERJthEQbIdFG5Iquf326w7szN3uw7sZ3F93g5pTrXR7RShY+8DJdWnGlm2P3Ua8l5hppKfq0cuV/CMnI
+        vny8ddX35+RdAfjAy1H5wi0cFrwvhDejQTS7wpcm95fcS+0teVW0Q567jGg+OLw113JXRHuQBqPb85kE
+        yIhmNyQ5DkQK+R1IRbMLlLyIx9rJjiuel/y1F83pgiBXJscFr0Rx5bX6I5q4IDZEfKhoKtuL5hzIEUXE
+        5/7pwVe1Fz1UnPHlLeJDfPStjv6I7t8Yy32qEZ3BU6QXzYXoHhJthEQbIdFGSLQREm2ERBsh0Uakonly
+        4QlGdIdUNJ07jam6RyqaPjT9aBEfekj0krzo0MoT8QktaC+a2MC6cjo+oQXtRUPhbM8vEY/wnxhIRVPN
+        DBOvq+XkFdEJjAVJidB+TkUDwR1mXOL/IJmiZRIeyIgGKhrZYXor/gZ5TCX/lgwNooEY4RTCrnDX1HQ8
+        H+Ih5DE3v2bTqqaiA+wKR5OBwoQ/dGs1X4wCw38UW5ErWsRDoo2QaCMk2giJNsG5b6sc3G0T1s1iAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="btnSave.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFoAAAApCAYAAAC1Hj5tAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVGhD7ZrNKwRhHMf9RW4ubk5OXCglBxykKFIkSQ4S
-        STisEqK8h1YUSbRko5W3JEt5t8pbJjmIw0/fZ8ew7di8PPOcvp/61tbuzOEz22+eme+TZFmWMN6Hog2F
-        og2Fog2Fog2Fog0loeib+zuZ3FyQCn+r5A/VSXpXiSS35DB24ANeSieaZCQ0J1e3164ekW9Fz++tqhNV
-        TrfL3EFQNi72JWLdCvkEPuBl8SgktbM+5QvC3XzGicZVqZ7ukOLxRrl7frRPSX7C08uzEl401iDH1+cx
-        XmNEQ3JWX6VM7QXsQ8lfWD3ZltyBGglfHruLxj+ZkvWAkYL5HScaMxnjguijfWVYOpfHPkVjdYFBzpms
-        l5e3V8nur5Lds3BUNO6UGOJEP73rU9K80BcVjXUglihEP+GbU7XAUKIzusvk5CFif0V0gvGR0pYXFZ3a
-        UaDWgMQb8BSpROMD8Q6KNgRFG4KiDUHRhqBoQ1C0ISjaEI5oPLngCYZ4gyMab+5YU3mHIxrVC1oBoh+8
-        Q8K7JCXaFxhVL6mJftBYoblSotFtZfaUc057QJm/RWZ2AlHRSNvSoHQGx+2viQ6wTQN7YuDXEY06C2Xi
-        buTI/hn5D6gFMSU+NtU4ohF0W+i4WAL8D0guHKmXwEHIcRsjGgkebqnqpWfNbx9GfgMqQfyTv0pG4kQj
-        GCMoFHFVcNdkO54YtFOYx9g+h/7VbQ+eq+iP4KpgaZLmK1KLbsY9qAJx08OGUDePSELRjL5QtKFQtKFQ
-        tKFQtJFY8g5w3Rck5VXYMgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH2SURBVGhD7ZqtS0NRGIf9i2wmm8lmEotJgwgGLVo0mAwK
+        foQFYcGgCBoGBpMgoiAaRESUhQnCgooosjA0HHmO91y8bLtMd/am3wMHLvsKz3n53XPfdz1OmCDRRki0
+        ERJthEQbIdFG5Iquf326w7szN3uw7sZ3F93g5pTrXR7RShY+8DJdWnGlm2P3Ua8l5hppKfq0cuV/CMnI
+        vny8ddX35+RdAfjAy1H5wi0cFrwvhDejQTS7wpcm95fcS+0teVW0Q567jGg+OLw113JXRHuQBqPb85kE
+        yIhmNyQ5DkQK+R1IRbMLlLyIx9rJjiuel/y1F83pgiBXJscFr0Rx5bX6I5q4IDZEfKhoKtuL5hzIEUXE
+        5/7pwVe1Fz1UnPHlLeJDfPStjv6I7t8Yy32qEZ3BU6QXzYXoHhJthEQbIdFGSLQREm2ERBsh0Uakonly
+        4QlGdIdUNJ07jam6RyqaPjT9aBEfekj0krzo0MoT8QktaC+a2MC6cjo+oQXtRUPhbM8vEY/wnxhIRVPN
+        DBOvq+XkFdEJjAVJidB+TkUDwR1mXOL/IJmiZRIeyIgGKhrZYXor/gZ5TCX/lgwNooEY4RTCrnDX1HQ8
+        H+Ih5DE3v2bTqqaiA+wKR5OBwoQ/dGs1X4wCw38UW5ErWsRDoo2QaCMk2giJNsG5b6sc3G0T1s1iAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="btnAdd.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFoAAAApCAYAAAC1Hj5tAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVGhD7ZrNKwRhHMf9RW4ubk5OXCglBxykKFIkSQ4S
-        STisEqK8h1YUSbRko5W3JEt5t8pbJjmIw0/fZ8ew7di8PPOcvp/61tbuzOEz22+eme+TZFmWMN6Hog2F
-        og2Fog2Fog2Fog0loeib+zuZ3FyQCn+r5A/VSXpXiSS35DB24ANeSieaZCQ0J1e3164ekW9Fz++tqhNV
-        TrfL3EFQNi72JWLdCvkEPuBl8SgktbM+5QvC3XzGicZVqZ7ukOLxRrl7frRPSX7C08uzEl401iDH1+cx
-        XmNEQ3JWX6VM7QXsQ8lfWD3ZltyBGglfHruLxj+ZkvWAkYL5HScaMxnjguijfWVYOpfHPkVjdYFBzpms
-        l5e3V8nur5Lds3BUNO6UGOJEP73rU9K80BcVjXUglihEP+GbU7XAUKIzusvk5CFif0V0gvGR0pYXFZ3a
-        UaDWgMQb8BSpROMD8Q6KNgRFG4KiDUHRhqBoQ1C0ISjaEI5oPLngCYZ4gyMab+5YU3mHIxrVC1oBoh+8
-        Q8K7JCXaFxhVL6mJftBYoblSotFtZfaUc057QJm/RWZ2AlHRSNvSoHQGx+2viQ6wTQN7YuDXEY06C2Xi
-        buTI/hn5D6gFMSU+NtU4ohF0W+i4WAL8D0guHKmXwEHIcRsjGgkebqnqpWfNbx9GfgMqQfyTv0pG4kQj
-        GCMoFHFVcNdkO54YtFOYx9g+h/7VbQ+eq+iP4KpgaZLmK1KLbsY9qAJx08OGUDePSELRjL5QtKFQtKFQ
-        tKFQtJFY8g5w3Rck5VXYMgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH2SURBVGhD7ZqtS0NRGIf9i2wmm8lmEotJgwgGLVo0mAwK
+        foQFYcGgCBoGBpMgoiAaRESUhQnCgooosjA0HHmO91y8bLtMd/am3wMHLvsKz3n53XPfdz1OmCDRRki0
+        ERJthEQbIdFG5Iquf326w7szN3uw7sZ3F93g5pTrXR7RShY+8DJdWnGlm2P3Ua8l5hppKfq0cuV/CMnI
+        vny8ddX35+RdAfjAy1H5wi0cFrwvhDejQTS7wpcm95fcS+0teVW0Q567jGg+OLw113JXRHuQBqPb85kE
+        yIhmNyQ5DkQK+R1IRbMLlLyIx9rJjiuel/y1F83pgiBXJscFr0Rx5bX6I5q4IDZEfKhoKtuL5hzIEUXE
+        5/7pwVe1Fz1UnPHlLeJDfPStjv6I7t8Yy32qEZ3BU6QXzYXoHhJthEQbIdFGSLQREm2ERBsh0Uakonly
+        4QlGdIdUNJ07jam6RyqaPjT9aBEfekj0krzo0MoT8QktaC+a2MC6cjo+oQXtRUPhbM8vEY/wnxhIRVPN
+        DBOvq+XkFdEJjAVJidB+TkUDwR1mXOL/IJmiZRIeyIgGKhrZYXor/gZ5TCX/lgwNooEY4RTCrnDX1HQ8
+        H+Ih5DE3v2bTqqaiA+wKR5OBwoQ/dGs1X4wCw38UW5ErWsRDoo2QaCMk2giJNsG5b6sc3G0T1s1iAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="btnNew.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFoAAAApCAYAAAC1Hj5tAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVGhD7ZrNKwRhHMf9RW4ubk5OXCglBxykKFIkSQ4S
-        STisEqK8h1YUSbRko5W3JEt5t8pbJjmIw0/fZ8ew7di8PPOcvp/61tbuzOEz22+eme+TZFmWMN6Hog2F
-        og2Fog2Fog2Fog0loeib+zuZ3FyQCn+r5A/VSXpXiSS35DB24ANeSieaZCQ0J1e3164ekW9Fz++tqhNV
-        TrfL3EFQNi72JWLdCvkEPuBl8SgktbM+5QvC3XzGicZVqZ7ukOLxRrl7frRPSX7C08uzEl401iDH1+cx
-        XmNEQ3JWX6VM7QXsQ8lfWD3ZltyBGglfHruLxj+ZkvWAkYL5HScaMxnjguijfWVYOpfHPkVjdYFBzpms
-        l5e3V8nur5Lds3BUNO6UGOJEP73rU9K80BcVjXUglihEP+GbU7XAUKIzusvk5CFif0V0gvGR0pYXFZ3a
-        UaDWgMQb8BSpROMD8Q6KNgRFG4KiDUHRhqBoQ1C0ISjaEI5oPLngCYZ4gyMab+5YU3mHIxrVC1oBoh+8
-        Q8K7JCXaFxhVL6mJftBYoblSotFtZfaUc057QJm/RWZ2AlHRSNvSoHQGx+2viQ6wTQN7YuDXEY06C2Xi
-        buTI/hn5D6gFMSU+NtU4ohF0W+i4WAL8D0guHKmXwEHIcRsjGgkebqnqpWfNbx9GfgMqQfyTv0pG4kQj
-        GCMoFHFVcNdkO54YtFOYx9g+h/7VbQ+eq+iP4KpgaZLmK1KLbsY9qAJx08OGUDePSELRjL5QtKFQtKFQ
-        tKFQtJFY8g5w3Rck5VXYMgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH2SURBVGhD7ZqtS0NRGIf9i2wmm8lmEotJgwgGLVo0mAwK
+        foQFYcGgCBoGBpMgoiAaRESUhQnCgooosjA0HHmO91y8bLtMd/am3wMHLvsKz3n53XPfdz1OmCDRRki0
+        ERJthEQbIdFG5Iquf326w7szN3uw7sZ3F93g5pTrXR7RShY+8DJdWnGlm2P3Ua8l5hppKfq0cuV/CMnI
+        vny8ddX35+RdAfjAy1H5wi0cFrwvhDejQTS7wpcm95fcS+0teVW0Q567jGg+OLw113JXRHuQBqPb85kE
+        yIhmNyQ5DkQK+R1IRbMLlLyIx9rJjiuel/y1F83pgiBXJscFr0Rx5bX6I5q4IDZEfKhoKtuL5hzIEUXE
+        5/7pwVe1Fz1UnPHlLeJDfPStjv6I7t8Yy32qEZ3BU6QXzYXoHhJthEQbIdFGSLQREm2ERBsh0Uakonly
+        4QlGdIdUNJ07jam6RyqaPjT9aBEfekj0krzo0MoT8QktaC+a2MC6cjo+oQXtRUPhbM8vEY/wnxhIRVPN
+        DBOvq+XkFdEJjAVJidB+TkUDwR1mXOL/IJmiZRIeyIgGKhrZYXor/gZ5TCX/lgwNooEY4RTCrnDX1HQ8
+        H+Ih5DE3v2bTqqaiA+wKR5OBwoQ/dGs1X4wCw38UW5ErWsRDoo2QaCMk2giJNsG5b6sc3G0T1s1iAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="btnSearch.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFoAAAApCAYAAAC1Hj5tAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVGhD7ZrNKwRhHMf9RW4ubk5OXCglBxykKFIkSQ4S
-        STisEqK8h1YUSbRko5W3JEt5t8pbJjmIw0/fZ8ew7di8PPOcvp/61tbuzOEz22+eme+TZFmWMN6Hog2F
-        og2Fog2Fog2Fog0loeib+zuZ3FyQCn+r5A/VSXpXiSS35DB24ANeSieaZCQ0J1e3164ekW9Fz++tqhNV
-        TrfL3EFQNi72JWLdCvkEPuBl8SgktbM+5QvC3XzGicZVqZ7ukOLxRrl7frRPSX7C08uzEl401iDH1+cx
-        XmNEQ3JWX6VM7QXsQ8lfWD3ZltyBGglfHruLxj+ZkvWAkYL5HScaMxnjguijfWVYOpfHPkVjdYFBzpms
-        l5e3V8nur5Lds3BUNO6UGOJEP73rU9K80BcVjXUglihEP+GbU7XAUKIzusvk5CFif0V0gvGR0pYXFZ3a
-        UaDWgMQb8BSpROMD8Q6KNgRFG4KiDUHRhqBoQ1C0ISjaEI5oPLngCYZ4gyMab+5YU3mHIxrVC1oBoh+8
-        Q8K7JCXaFxhVL6mJftBYoblSotFtZfaUc057QJm/RWZ2AlHRSNvSoHQGx+2viQ6wTQN7YuDXEY06C2Xi
-        buTI/hn5D6gFMSU+NtU4ohF0W+i4WAL8D0guHKmXwEHIcRsjGgkebqnqpWfNbx9GfgMqQfyTv0pG4kQj
-        GCMoFHFVcNdkO54YtFOYx9g+h/7VbQ+eq+iP4KpgaZLmK1KLbsY9qAJx08OGUDePSELRjL5QtKFQtKFQ
-        tKFQtJFY8g5w3Rck5VXYMgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH2SURBVGhD7ZqtS0NRGIf9i2wmm8lmEotJgwgGLVo0mAwK
+        foQFYcGgCBoGBpMgoiAaRESUhQnCgooosjA0HHmO91y8bLtMd/am3wMHLvsKz3n53XPfdz1OmCDRRki0
+        ERJthEQbIdFG5Iquf326w7szN3uw7sZ3F93g5pTrXR7RShY+8DJdWnGlm2P3Ua8l5hppKfq0cuV/CMnI
+        vny8ddX35+RdAfjAy1H5wi0cFrwvhDejQTS7wpcm95fcS+0teVW0Q567jGg+OLw113JXRHuQBqPb85kE
+        yIhmNyQ5DkQK+R1IRbMLlLyIx9rJjiuel/y1F83pgiBXJscFr0Rx5bX6I5q4IDZEfKhoKtuL5hzIEUXE
+        5/7pwVe1Fz1UnPHlLeJDfPStjv6I7t8Yy32qEZ3BU6QXzYXoHhJthEQbIdFGSLQREm2ERBsh0Uakonly
+        4QlGdIdUNJ07jam6RyqaPjT9aBEfekj0krzo0MoT8QktaC+a2MC6cjo+oQXtRUPhbM8vEY/wnxhIRVPN
+        DBOvq+XkFdEJjAVJidB+TkUDwR1mXOL/IJmiZRIeyIgGKhrZYXor/gZ5TCX/lgwNooEY4RTCrnDX1HQ8
+        H+Ih5DE3v2bTqqaiA+wKR5OBwoQ/dGs1X4wCw38UW5ErWsRDoo2QaCMk2giJNsG5b6sc3G0T1s1iAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <metadata name="ColId.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
